--- a/mysite/personal/templates/personal/header.html
+++ b/mysite/personal/templates/personal/header.html
@@ -31,6 +31,17 @@
 		    setSidebarHeight();
         });
     </script>
+      <script type="text/javascript">
+
+        $(document).ready(function () {
+            setupLeftMenu();
+
+            $('.datatable').dataTable();
+			setSidebarHeight();
+
+
+        });
+    </script>
 
 </head>
 <body>
