--- a/mysite/personal/templates/personal/includes/head.html
+++ b/mysite/personal/templates/personal/includes/head.html
@@ -14,7 +14,7 @@
                 <img src="img/img-profile.jpg" alt="Profile Pic" /></div>
             <div class="floatleft marginleft10">
                 <ul class="inline-ul floatleft">
-                    <li>Hello Admin</li>
+                    <li>Name</li>
                     <li><a href="#">Logout</a></li>
                 </ul>
             </div>
