--- a/mysite/personal/templates/personal/includes/navbar.html
+++ b/mysite/personal/templates/personal/includes/navbar.html
@@ -1,10 +1,10 @@
 {% block content %}
 <div class="grid_12">
     <ul class="nav main">
-        <li class="ic-dashboard"><a href="index.html"><span>Dashboard</span></a> </li>
-        <li class="ic-form-style"><a href=""><span>User Profile</span></a></li>
-        <li class="ic-typography"><a href="changepassword.html"><span>Change Password</span></a></li>
-        <li class="ic-grid-tables"><a href="inbox.html"><span>Inbox</span></a></li>
+        <li class="ic-dashboard"><a href="{% url 'index' %}"><span>Home</span></a> </li>
+        <li class="ic-form-style"><a href="post"><span>New Summary</span></a></li>
+        <li class="ic-form-style"><a href="postlist"><span>Previous Summary List</span></a></li>
+        <li class="ic-grid-tables"><a href="inbox"><span>Inbox</span></a></li>
         <li class="ic-charts"><a href="postlist.html"><span>Visit Website</span></a></li>
     </ul>
 </div>
