--- a/mysite/personal/templates/personal/includes/sidebar.html
+++ b/mysite/personal/templates/personal/includes/sidebar.html
@@ -26,8 +26,8 @@
                 </li>
                 <li><a class="menuitem">Post Option</a>
                     <ul class="submenu">
-                        <li><a href="addpost.html">Add Post</a> </li>
-                        <li><a href="postlist.html">Post List</a> </li>
+                        <li><a href="post">Add Post</a> </li>
+                        <li><a href="postlist">Post List</a> </li>
                     </ul>
                 </li>
             </ul>
